--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     padding: 0;
     width: 100%;
     justify-content: center;
+    font-family: "Roboto", sans-serif;
 }
 
 .container1 {
@@ -19,7 +20,6 @@ body {
     color: white;
     flex: 1;
     width: 100%;
-    font-family: "Roboto", sans-serif;
     justify-content: space-between;
     padding: 50px;
 }
@@ -31,7 +31,6 @@ body {
     flex-direction: column;
     width: 100%;
     font-size: 24px;
-    font-family: "Roboto", sans-serif;
     padding-left: 50px;
     padding-right: 50px;
 }
@@ -69,7 +68,6 @@ li {
     flex: 1;
     justify-content: center;
     align-items: center;
-    font-family: "Roboto", sans-serif;
     width: 100%;
     padding: 50px;
 }
@@ -94,7 +92,6 @@ li {
     background-color: #E5E7EB;
     font-style: italic;
     font-weight: 300;
-    font-family: "Roboto", sans-serif;
     font-size: 36px;
     padding: 50px;
     width: 100%;
@@ -118,7 +115,7 @@ li {
   }
 
 .name {
-    text-indent: 450px;
+    text-align: end;
     font-size: 16px;
     font-weight: bold;
 }
@@ -126,7 +123,6 @@ li {
 .information {
     font-size: 36px;
     font-weight: 800;
-    font-family: "Roboto", sans-serif;
     color: #1F2937;
     padding-bottom: 25px;
 }
@@ -152,7 +148,6 @@ li {
     background-color: #3882F6;
     color: #E5E7EB;
     border-radius: 10px;
-    font-family: "Roboto", sans-serif;
 }
 
 .left-section {
@@ -217,6 +212,16 @@ h3 {
 p {
     margin: 0;
     width: 700px;
+}
+
+.real-footer {
+    display: flex;
+    justify-content: center;
+    background-color: #1F2937;
+    color: #F9FAf8;
+    width: 100%;
+    font-size: 16px;
+    padding: 30px;
 }
 
 
