--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@ h3 {
 
 p {
     margin: 0;
-    width: 700px;
+    width: auto;
 }
 
 .real-footer {
@@ -221,7 +221,13 @@ p {
     color: #F9FAf8;
     width: 100%;
     font-size: 16px;
-    padding: 30px;
+    padding: 30px 50px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    width: 600px;
 }
 
 
